# document_ingestion_toolkit

./: .env.example  README.md  notebook.ipynb  pyproject.toml
files/chunks/: Chang and Fosler-Lussier - 2023 - How to Prompt LLMs for Text-to-SQL A Study in Zer.csv  Katsogiannis-Meimarakis and Koutrika - 2023 - A survey on deep learning approaches for text-to-S.csv  Rajkumar et al. - 2022 - Evaluating the Text-to-SQL Capabilities of Large L.csv  Zhang et al. - 2024 - Benchmarking the Text-to-SQL Capability of Large L.csv
files/embeddings/: Chang and Fosler-Lussier - 2023 - How to Prompt LLMs for Text-to-SQL A Study in Zer_embeddings.csv  Katsogiannis-Meimarakis and Koutrika - 2023 - A survey on deep learning approaches for text-to-S_embeddings.csv  Rajkumar et al. - 2022 - Evaluating the Text-to-SQL Capabilities of Large L_embeddings.csv  Zhang et al. - 2024 - Benchmarking the Text-to-SQL Capability of Large L_embeddings.csv
files/md/: Chang and Fosler-Lussier - 2023 - How to Prompt LLMs for Text-to-SQL A Study in Zer.md  Katsogiannis-Meimarakis and Koutrika - 2023 - A survey on deep learning approaches for text-to-S.md  Rajkumar et al. - 2022 - Evaluating the Text-to-SQL Capabilities of Large L.md  Zhang et al. - 2024 - Benchmarking the Text-to-SQL Capability of Large L.md
